5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4446/executions/1596_842.log
== TEST (2019-03-26 19:34:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada //1000
pegarsegdigto = entrada % 1000
seg_dig = pegarsegdigito // 100
pegarterceirodigito = pegardigito % 100
ter_dig = pegarterceirodigito //10
pegarquartodigito = pegarterceirodigito % 10
quar_dig = pegarterceirodigito % 10
soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    seg_dig = pegarsegdigito // 100
NameError: name 'pegarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:34:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada //1000
pegarsegdigto = entrada % 1000
seg_dig = pegarsegdigito // 100
pegarterceirodigito = pegardigito % 100
ter_dig = pegarterceirodigito //10
pegarquartodigito = pegarterceirodigito % 10
quar_dig = pegarterceirodigito % 10
soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.202448
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 7, in <module>
    seg_dig = pegarsegdigito // 100
NameError: name 'pegarsegdigito' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:34:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada //1000
pegarsegdigto = entrada % 1000
seg_dig = pegarsegdigito // 100
pegarterceirodigito = pegardigito % 100
ter_dig = pegarterceirodigito //10
pegarquartodigito = pegarterceirodigito % 10
quar_dig = pegarterceirodigito % 10
soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    seg_dig = pegarsegdigito // 100
NameError: name 'pegarsegdigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:35:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada //1000
pegarsegdigito = entrada % 1000
seg_dig = pegarsegdigito // 100
pegarterceirodigito = pegardigito % 100
ter_dig = pegarterceirodigito //10
pegarquartodigito = pegarterceirodigito % 10
quar_dig = pegarterceirodigito % 10
soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    pegarterceirodigito = pegardigito % 100
NameError: name 'pegardigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:35:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada //1000
pegarsegdigito = entrada % 1000
seg_dig = pegarsegdigito // 100
pegarterceirodigito = pegarsegundodigito % 100
ter_dig = pegarterceirodigito //10
pegarquartodigito = pegarterceirodigito % 10
quar_dig = pegarterceirodigito % 10
soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    pegarterceirodigito = pegarsegundodigito % 100
NameError: name 'pegarsegundodigito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:35:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada //1000
pegarsegdigito = entrada % 1000
seg_dig = pegarsegdigito // 100
pegarterceirodigito = pegarsegdigito % 100
ter_dig = pegarterceirodigito //10
pegarquartodigito = pegarterceirodigito % 10
quar_dig = pegarterceirodigito % 10
soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    soma_dos_digitos = pri_dig + seg_dig + ter_dig + quar_dig
NameError: name 'pri_dig' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:36:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada //1000
pegarsegdigito = entrada % 1000
seg_dig = pegarsegdigito // 100
pegarterceirodigito = pegarsegdigito % 100
ter_dig = pegarterceirodigito //10
pegarquartodigito = pegarterceirodigito % 10
quar_dig = pegarterceirodigito % 10
soma_dos_digitos = primeiro_dig + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    soma_dos_digitos = primeiro_dig + seg_dig + ter_dig + quar_dig
NameError: name 'primeiro_dig' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:36:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada //1000
pegarsegdigito = entrada % 1000
seg_dig = pegarsegdigito // 100
pegarterceirodigito = pegarsegdigito % 100
ter_dig = pegarterceirodigito //10
pegarquartodigito = pegarterceirodigito % 10
quar_dig = pegarterceirodigito % 10
soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:36:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
entrada = int(input("numero de quatro digitos:"))
primeiro_digito = entrada //1000
pegarsegdigito = entrada % 1000
seg_dig = pegarsegdigito // 100
pegarterceirodigito = pegarsegdigito % 100
ter_dig = pegarterceirodigito //10
pegarquartodigito = pegarterceirodigito % 10
quar_dig = pegarterceirodigito % 10
soma_dos_digitos = primeiro_digito + seg_dig + ter_dig + quar_dig
print(soma_dos_digitos)
-- EXECUTION TIME:
0.301986
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
